[gd_scene load_steps=3 format=3 uid="uid://bdvk5ldbwsc4k"]

[ext_resource type="Script" uid="uid://cmxpsbtqxtkfu" path="res://scenes/story_puzzle.gd" id="1_mbv7c"]
[ext_resource type="PackedScene" uid="uid://dilu575g7o0lv" path="res://scenes/puzz_story_l_1.tscn" id="2_3x4fk"]

[node name="story puzzle" type="Node2D"]
script = ExtResource("1_mbv7c")
scene = ExtResource("2_3x4fk")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1282.0
offset_bottom = 721.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.176471, 0.443137, 0.780392, 0.176471)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -28.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Level 1"

[node name="Button2" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Level 2"

[node name="Button3" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Level 3"

[node name="Button4" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Level 4"

[node name="Button5" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Level 5"

[connection signal="pressed" from="Control/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Button5" to="." method="_on_button_5_pressed"]
